[package]
name    = "cmwx1zzabz"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
cortex-m = {version = "0.6.1", features = ["const-fn"] }
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master"}
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.2"

[dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32l0x2", "rt"]

[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"
stm32-usbd  = "0.5.0"

[dev-dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32-usbd"]
